force-app/main/default/objects/Lead/fields/DraftSource__c.field-meta.xml
<CustomField>
    <fullName>DraftSource__c</fullName>
    <label>Draft Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>