force-app/main/default/objects/Lead/fields/IsPartnerLead__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner Lead</label>
    <type>Checkbox</type>
</CustomField>