force-app/main/default/objects/Lead/fields/LastPartnerBatchProcess__c.field-meta.xml
<CustomField>
    <fullName>LastPartnerBatchProcess__c</fullName>
    <label>Last Partner Batch Process</label>
    <type>DateTime</type>
</CustomField>