force-app/main/default/objects/Lead/fields/PartnerStatus__c.field-meta.xml
<CustomField>
    <fullName>PartnerStatus__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golden Partner</fullName>
            </value>
            <value>
                <fullName>Normal Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>